fix misspell and horizontal scroll because of gaps in .search__modes-list

--- a/src/components/blocks/search/__modes-list/search__modes-list.css
+++ b/src/components/blocks/search/__modes-list/search__modes-list.css
@@ -10,6 +10,7 @@
         justify-content: flex-start;
         color: #000;
         height: 50px;
+        gap: 0;
     }
 }
 
